--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,31 @@
-<%= @post.title %> <br>
-<%= @post.content %>
+<div id="post_show_content" class="skinny_wrapper wrapper_padding">
+		<header>
+			<p class="date"><%= @post.created_at.strftime('%A, %B %d %Y') %></p>
+			<h1><%= @post.title %></h1>
+			<hr>
+
+		</header>
+		<div id="content">
+			<%= @post.content %>
+			
+			<hr>
+		</div>
+		<div id="share_box">
+			<p>Share The DO List</p>
+			<!-- Twitter -->
+			<a onclick="javascript:window.open('http://twitter.com/share?text=<%=@post.title %> by @stuarttee93 - &amp;url=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);">
+				<i class="fa fa-twitter"></i></a>
+			<!-- Facebook -->
+			<a onclick="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=<%= url_for([ @post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);">
+				<i class="fa fa-facebook-official"></i></a>
+			<!-- Google Plus -->
+			<a onclick="javascript:window.open('http://plus.google.com/share?url=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);">
+				<i class="fa fa-google-plus"></i></a>
+			<hr>
+		</div>
+		
+	</di
+
 
 <br>
 <br>
