--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
 
 		</header>
 		<div id="content">
-			<%= @post.content %>
+			<%= markdown  @post.content %>
 			
 			<hr>
 		</div>
@@ -24,7 +24,7 @@
 			<hr>
 		</div>
 		
-	</di
+	</div>
 
 
 <br>
