--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,7 +16,7 @@
 			<a onclick="javascript:window.open('http://twitter.com/share?text=<%=@post.title %> by @stuarttee93 - &amp;url=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);">
 				<i class="fa fa-twitter"></i></a>
 			<!-- Facebook -->
-			<a onclick="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=<%= url_for([ @post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);">
+			<a onclick="javascript:window.open('http://www.facebook.com/sharer/sharer.php?u=<%= url_for([ @post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);">
 				<i class="fa fa-facebook-official"></i></a>
 			<!-- Google Plus -->
 			<a onclick="javascript:window.open('http://plus.google.com/share?url=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);">
