--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
 		<% @posts.each do |post| %>
 			<div class="post">
 				<p class="date"><%= post.created_at.strftime('%A, %B %d %Y') %></p>
-				<h2><a href="#"><%= link_to post.title, post %></a></h2>
+				<h2><%= link_to post.title, post %></h2>
 				<hr>
 			</div>
 
@@ -13,9 +13,5 @@
 		
 
 	</div>
-	<div class="pagination">
-			<span class="previous_page disabled">Previous</span>
-			<em class="current">1</em>
-			<a rel="next" href="#">2</a>
-			<a href="#" class="next_page">Next</a>
-		</div>
+	
+	<%= will_paginate @posts %>
