--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
 		<%= link_to "Stuart Tee", root_path, class: "name" %>
 		<nav>
 			<%= link_to "Articles", posts_path %>
-			<a href="#">Projects</a>
+			<%= link_to "Projects", projects_path %>
+			
 			<a href="contact.html">Contact</a>
 		</nav>
 		
