--- a/app/assets/css/application.css.css
+++ b/app/assets/css/application.css.css
@@ -484,6 +484,23 @@ input[type="submit"], .button {
     border: 2px solid #8bc6db;
     color: #8bc6db; }
 
+.project_button {
+  outline: none;
+  background: transparent;
+  border: 2px solid #E9E9E9;
+  text-align: center;
+  font-size: 1em;
+  color: #424652;
+  text-decoration: none;
+  padding: 1em 2em; }
+  .project_button:hover {
+    border: 2px solid #8bc6db;
+    color: #8bc6db; }
+
+.button_wrapper {
+  margin: 4em 0 0 0;
+  text-align: center; }
+
 .col-1, .col-2, .col-3 {
   float: left; }
 
