added edit and delete to projects

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -12,4 +12,7 @@
 		</div>
 	
 		<hr>
+
+		<%= link_to "Edit", edit_project_path(@project) %>
+		<%= link_to "Delete", project_path(@project), method: :delete, data: { confirm: "Are you sure?"} %>
 </div>
