--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
 		<h2>About</h2>
 		<hr>
 		<p>I'm a developer living in Surrey, England</p>
-		<p>I am currently working at <a href="#">Bias Development</a> and <a href="#">Minboso</a> doing getting some Web Development Work Experience. </p>
+		<p>I am currently working at <a href="#">Bias Development</a> and <a href="#">Minboso</a> getting some Web Development Work Experience. </p>
 		<p>Recently I have started learning Ruby on Rails and learning more about JavaScript and JQuery</p>
 	</div>
 	<div class="col-2 homepage_content">
