--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -12,7 +12,22 @@
 		</div>
 	
 		<hr>
-
 		<%= link_to "Edit", edit_project_path(@project) %>
 		<%= link_to "Delete", project_path(@project), method: :delete, data: { confirm: "Are you sure?"} %>
+
+		<div id="share_box">
+			<p>Share The DO List</p>
+			<!-- Twitter -->
+			<a onclick="javascript:window.open('http://twitter.com/share?text=<%=@project.title %> by @stuarttee93 - &amp;url=<%= url_for([@project, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);">
+				<i class="fa fa-twitter"></i></a>
+			<!-- Facebook -->
+			<a onclick="javascript:window.open('http://www.facebook.com/sharer/sharer.php?u=<%= url_for([ @project, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);">
+				<i class="fa fa-facebook-official"></i></a>
+			<!-- Google Plus -->
+			<a onclick="javascript:window.open('http://plus.google.com/share?url=<%= url_for([@project, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);">
+				<i class="fa fa-google-plus"></i></a>
+			<hr>
+		</div>
+		<%= render'comments' %>
+
 </div>
