--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,11 +24,13 @@
 			<hr>
 		</div>
 		<%= render'comments' %>
-	</div>
+</div>
 
 
 <br>
 <br>
 
+<div class="project_button">
 <%= link_to "Edit", edit_post_path(@post) %>
 <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure?"} %>
+</div>
