--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,13 @@
 
 	</header>
 
+	<% if notice %>
+		<p class="notice"><%= notice %></p>
+	<% elsif alert %>
+	    <p class="alert"><%= alert %></p>
+	<% end %>
+
+
 <%= yield %>
 
 <footer id="main_footer"> 
