--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,8 +10,17 @@
 			
 			<hr>
 		</div>
+
+		<% if user_signed_in? %>
+			<div id="admin_links">
+				<%= link_to "Edit Article", edit_post_path(@post) %>
+				<%= link_to "Delete Article", post_path(@post), method: :delete, data: { confirm: "Are you Sure" } %>
+			</div>
+		<% end %>
+
+
 		<div id="share_box">
-			<p>Share The DO List</p>
+			<p>Share <%= @post.title %></p>
 			<!-- Twitter -->
 			<a onclick="javascript:window.open('http://twitter.com/share?text=<%=@post.title %> by @stuarttee93 - &amp;url=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);">
 				<i class="fa fa-twitter"></i></a>
@@ -30,7 +39,3 @@
 <br>
 <br>
 
-<div class="project_button">
-<%= link_to "Edit", edit_post_path(@post) %>
-<%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure?"} %>
-</div>
