--- a/app/assets/css/application.css.css
+++ b/app/assets/css/application.css.css
@@ -382,6 +382,11 @@ body {
 .hidden {
   display: none; }
 
+.notice, .alert {
+  text-align: center;
+  padding: 1em 0;
+  border-bottom: 1px solid #E9E9E9; }
+
 h1, h2, h3, h4, h5, h6, p, ul, li {
   color: #424652; }
 
@@ -586,6 +591,20 @@ input[type="submit"], .button {
     #share_box i:hover {
       color: #8bc6db;
       cursor: pointer; }
+
+#admin_links {
+  border-top: 1px solid #E9E9E9;
+  border-bottom: 1px solid #E9E9E9;
+  text-align: center;
+  padding: 1em 0;
+  margin: 3em 0; }
+  #admin_links a {
+    color: #9a9da4;
+    margin: 0 1em;
+    font-weight: 700;
+    font-size: .8em;
+    text-transform: uppercase;
+    text-decoration: none; }
 
 .pagination:before,
 .pagination:after {
