--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -12,15 +12,17 @@
 		</div>
 	
 		<hr>
-		<div class="project_wrapper ">
-			<%= link_to "Edit", edit_project_path(@project) %>
-		</div>
-		<div class="project_button">
-			<%= link_to "Delete", project_path(@project), method: :delete, data: { confirm: "Are you sure?"} %>
-		</div>	
+		
+
+		<% if user_signed_in? %>
+			<div id="admin_links">
+				<%= link_to "Edit Project", edit_project_path(@project) %>
+				<%= link_to "Delete project", project_path(@project), method: :delete, data: { confirm: "Are you Sure" } %>
+			</div>
+		<% end %>	
 
 		<div id="share_box">
-			<p>Share The DO List</p>
+			<p>Share <%= @project.title %></p>
 			<!-- Twitter -->
 			<a onclick="javascript:window.open('http://twitter.com/share?text=<%=@project.title %> by @stuarttee93 - &amp;url=<%= url_for([@project, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);">
 				<i class="fa fa-twitter"></i></a>
