--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,20 +1,25 @@
-<h1 id="page_title">Stuff I've Worked On</h1>
 
-<% if user_signed_in? %>
-			<div id="admin_links">
-				<%= link_to "Create New Project", new_project_path(@project) %>
-				
-			</div>
-<% end %>
+	<h1 id="page_title">Stuff I've Worked On</h1>
 
-<div id="posts_wrapper" class="skinny_wrapper">
-	<% @projects.each do |project| %>
-		<div class="post">
-			<p class="date"><%= project.created_at.strftime('%A, %B %d %Y') %></p>
-			<h2><%= link_to project.title, project %></h2>
-			<hr>
-		</div>
+
+	<% if user_signed_in? %>
+				<div id="create_links">
+					<%= link_to "Create New Project", new_project_path(@project) %>
+					
+				</div>
 	<% end %>
-</div>
 
-<%= will_paginate @projects %>
+	<div id="main_content">
+
+	<div id="posts_wrapper" class="skinny_wrapper">
+		<% @projects.each do |project| %>
+			<div class="post">
+				<p class="date"><%= project.created_at.strftime('%A, %B %d %Y') %></p>
+				<h2><%= link_to project.title, project %></h2>
+				<hr>
+			</div>
+		<% end %>
+	</div>
+
+	<%= will_paginate @projects %>
+</div>
