--- a/app/assets/stylesheets/_posts_projects.scss
+++ b/app/assets/stylesheets/_posts_projects.scss
@@ -70,7 +70,7 @@
 	border-bottom: 1px solid $border;
 	text-align: center;
 	padding: 1em 0;
-	margin: 3em 0;
+	margin-bottom: 3em;
 	a {
 		color: $light;
 		margin: 0 1em;
@@ -79,6 +79,20 @@
 		text-transform: uppercase;
 		text-decoration: none;
 	}
+#create_links {
+	text-align: center;
+		padding: 1em 0;
+		margin: 3em 0;
+		a {
+			color: $light;
+			margin: 0 1em;
+			font-weight: 700;
+			font-size: .8em;
+			text-transform: uppercase;
+			text-decoration: none;
+		}
+
+}
 
 
 }
