--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,22 +1,23 @@
+
 <h1 id="page_title">Stuff I've Written</h1>
-
 	<% if user_signed_in? %>
-			<div id="admin_links">
-				<%= link_to "Create New Article", new_post_path(@post) %>
-				
-			</div>
+		<div id="create_links">
+			<%= link_to "Create New Article", new_post_path(@post) %>
+		</div>
 	<% end %>
-
-	<div id="posts_wrapper" class="skinny_wrapper">
-		<% @posts.each do |post| %>
-			<div class="post">
-				<p class="date"><%= post.created_at.strftime('%A, %B %d %Y') %></p>
-				<h2><%= link_to post.title, post %></h2>
-				<hr>
+		
+		<div id="main_content">
+			<div id="posts_wrapper" class="skinny_wrapper">
+				<% @posts.each do |post| %>
+					<div class="post">
+						<p class="date"><%= post.created_at.strftime('%A, %B %d %Y') %></p>
+						<h2><%= link_to post.title, post %></h2>
+						<hr>
+					</div>
+				<% end %>
 			</div>
-		<% end %>
-	</div>
 
 
-	
-	<%= will_paginate @posts %>
+			
+			<%= will_paginate @posts %>
+</div>
