--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,17 +1,22 @@
-<div id="post_show_content" class="skinny_wrapper wrapper_padding">
-	<header>
-		<p class="date"><%= @project.created_at.strftime('%A, %B %d %Y') %></p>
-		<h1><%= @project.title %></h1>
-		<hr>
 
-	</header>
-	<div id="content">
-		<%= markdown  @project.description %>
-		<div class="button_wrapper">
-			<a href="<%= @project.link %>" class="project_button" target="_blank"> Visit <%= @project.title %></a>
+	<div id="post_show_content" class="skinny_wrapper wrapper_padding">
+		
+		<header>
+			<p class="date"><%= @project.created_at.strftime('%A, %B %d %Y') %></p>
+			<h1><%= @project.title %></h1>
+			<hr>
+
+		</header>
+		<div id="content">
+			<%= markdown  @project.description %>
+			<div class="button_wrapper">
+				<a href="<%= @project.link %>" class="project_button" target="_blank"> Visit <%= @project.title %></a>
+			</div>
+		
+			<hr>
 		</div>
-	
-		<hr>
+	</div>
+
 		
 
 		<% if user_signed_in? %>
